--- a/src/styles/themes/dark.less
+++ b/src/styles/themes/dark.less
@@ -120,7 +120,7 @@
 	--alert-border-error: var(--red-800);
 
 	// clear
-	--clear-color: var(--text-subtle);
+	--clear-color: var(--gray-24);
 
 	--clear-bg: var(--gray-10);
 	--clear-bg-hover: var(--gray-8);
