--- a/src/styles/themes/light.less
+++ b/src/styles/themes/light.less
@@ -120,9 +120,9 @@
 	--alert-border-error: var(--red-400);
 
 	// clear
-	--clear-color: var(--text-inverse);
+	--clear-color: var(--gray-0);
 
-	--clear-bg: var(--gray-8);
-	--clear-bg-hover: var(--gray-6);
-	--clear-bg-active: var(--gray-4);
+	--clear-bg: var(--gray-12);
+	--clear-bg-hover: var(--gray-10);
+	--clear-bg-active: var(--gray-8);
 }
